--- a/site-plan-rafting.html
+++ b/site-plan-rafting.html
@@ -35,7 +35,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img alt="gravity images" src="images/gravity.jpg" />
+    <img alt="logo images" src="images/logo.png" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -99,7 +99,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Pa ge2</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr />
