--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="Blog.html">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -28,7 +28,7 @@
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Dry Oar </h4>
             <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
+                <a class='book' href="Blog.html">Book Now</a>
             </div>
         </section>
     </div>
